# e46-smart-dash

./: .gitignore  0 开发流程.md  3 获取数据总览.md  BOM.md  README.md  _check_index.py  _check_local_index.py  _check_mechanism.py  _check_sessions.py  _check_sessions2.py  _check_sessions3.py  _check_ws_index.py  _fix_index.py  _verify_fix.py  参考 - 7inch DSI LCD 屏幕.md  参考 - CH343 USB UART Board.md  参考 - CM4-IO-BASE-B 底板.md  参考 - Core-3566.md  参考 - GPS天线和阻抗控制.md  参考 - carplay实现.md  参考 - mfi芯片debug.md  参考 - 宝马 Business CD.md  参考 - 宝马 IKE 接口定义.md  参考 - 宝马 中控按钮模块.md  参考 - 宝马K、I-Bus 定义.md  参考 - 宝马后备箱CD碟盒.md  参考 - 旧版硬件配置.md  参考 - 麦克风走线和抗干扰.md  待定 - 屏幕备选.md  待定问题.md  硬件 - Board Monitor车型音频传输.md  硬件 - GPS定位.md  硬件 - RTC备份供电.md  硬件 - 不同阶段的芯片选型.md  硬件 - 外部实体接线一览.md  硬件 - 屏幕.md  硬件 - 工作温度审计.md  硬件 - 总体框架.md  硬件 - 散热管理.md  硬件 - 松下滚轮编码器.md  (+17 more)
.github/: copilot-instructions.md
.github/prompts/: monitor.prompt.md  worker.prompt.md
.github/skills/dual-agent-gate/: SKILL.md
cmake/: toolchain-aarch64.cmake
config/dts/: mcp2515_can0.dtbo  mcp2515_can0.dts  mcp2515_two_can.dtbo  spidev-spi1-m1-hs.dts  spidev-spi1-m1.dts
config/systemd/: wifi-autoconnect.service  wifi-autoconnect.timer
docs/: collaboration-workflow.md  pin-mapping.md  reference-index.md
docs/devlog/: 01-armbian-bringup.md  02-dsi-display.md  03-qt6-cross-compile.md  04-io-verification.md  05-wifi-autoconnect.md  06-can-bringup.md  boot-baseline.md
docs/review/: 01-common-library.md  02-can-path.md  03-gateway-flow.md  04-build-config.md  05-openspec-consistency.md  06-document-accuracy.md  07-ssh-board-checklist.md  07-ssh-board-report.md
mcp-servers/notify/: requirements.txt  server.py
memories/repo/: current-status.md  worker-progress.md
src/: CMakeLists.txt
src/audio-manager/: CMakeLists.txt
src/can-gateway/: CMakeLists.txt  can-gateway.json  can-gateway.service
src/can-gateway/include/: AdcSampler.h  CanDecoder.h  CanInterface.h  GatewayDaemon.h  KBusDecoder.h  KBusInterface.h  e46_can_ids.h
src/can-gateway/src/: AdcSampler.cpp  CanDecoder.cpp  CanInterface.cpp  GatewayDaemon.cpp  KBusDecoder.cpp  KBusInterface.cpp  kbus_quick_test.cpp  main.cpp
src/carplay/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/e46/common/: config.h  logging.h  ring_buffer.h  types.h
src/common/src/: config.cpp  logging.cpp  types.cpp
src/sensor-collector/: CMakeLists.txt
src/track-logger/: CMakeLists.txt
src/ui-app/: CMakeLists.txt  main.cpp  main.qml
src/voice-engine/: CMakeLists.txt
归档/: 参考 - 宝马 IHKA 接口定义.md  参考 - 宝马 IKE 液晶屏显示.md  参考 - 宝马 OBD 接口定义.md  参考 - 宝马 WDS 总览.md  参考 - 语音生成 TTS.md  参考 - 语音识别 ASR.md  技术 - 语音拼接实现.md
(+16 files in other folders)
